[gd_scene load_steps=6 format=2]

[ext_resource path="res://EnemyAI/EnemyAI.gd" type="Script" id=1]
[ext_resource path="res://EnemyAI/DumbBabyStrategy.gd" type="Script" id=2]
[ext_resource path="res://EnemyAI/MediumStrategy.gd" type="Script" id=3]
[ext_resource path="res://EnemyAI/EasyStrategy.gd" type="Script" id=4]
[ext_resource path="res://EnemyAI/HardStrategy.gd" type="Script" id=5]

[node name="EnemyAI" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DumbBabyStrategy" type="Node" parent="."]
script = ExtResource( 2 )

[node name="EasyStrategy" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MediumStrategy" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HardStrategy" type="Node" parent="."]
script = ExtResource( 5 )
